--- a/index.html
+++ b/index.html
@@ -70,7 +70,25 @@ window.onload = function() {
 }
 </script>
 
-<div class="content-wrapper">
+<div class="main-content-area">
+    <div style="max-width: 720px; margin: 0 auto;">
+
+        <header class="header">
+            <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+            <a href="index.html" class="header-title">多機能ツールボックス (PC版)</a>
+        </header>
+
+        <div class="top-ad-header"><div id="ad-area-top"></div></div>
+
+        <nav class="side-nav" id="sideNav">
+            <a href="counter.html">📝 文字数カウント</a> 
+            <a href="roulette.html">🎲 ルーレット</a> 
+            <a href="settings.html">⚙ 設定</a>
+            <a href="help.html">ヘルプ</a>
+            <a href="about.html">制作者</a>
+        </nav>
+        
+        <div class="content-wrapper">
             <h1>多機能ツールボックスへようこそ</h1>
             
             <div class="tool-grid">
