--- a/maintenance.html
+++ b/maintenance.html
@@ -51,7 +51,7 @@ body {
 <div class="maintenance-box">
     <h1>🚨 メンテナンス実施中 🚨</h1>
     <p>
-        **多機能ツールボックスは、現在、システム全体の調整のため、一時的にアクセスを停止しております。**
+        多機能ツールボックスは、現在、システム全体の調整のため、一時的にアクセスを停止しております。
     </p>
     <p>
         ご利用中のお客様には大変ご不便をおかけし、申し訳ございません。
