--- a/SP/waiting.html
+++ b/SP/waiting.html
@@ -1,68 +1,33 @@
 <!DOCTYPE html>
-<html lang="ja" data-ads="true">
+<html lang="ja">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>処理中です | ツール</title>
-<link rel="stylesheet" href="style.css">
-<style>
-.waiting-container {
-    text-align: center;
-    padding: 50px 20px;
-    max-width: 600px;
-    margin: 50px auto;
-    background: var(--card);
-    border-radius: 12px;
-    box-shadow: var(--shadow);
-    border: 1px solid var(--border);
-}
-
-.waiting-container h1 {
-    font-size: 2em;
-    color: var(--accent-dark);
-    margin-bottom: 20px;
-}
-
-.spinner {
-    border: 8px solid var(--accent-light);
-    border-top: 8px solid var(--accent-dark);
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    animation: spin 2s linear infinite;
-    margin: 20px auto;
-}
-
-@keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>処理中です | 多機能ツールボックス (SP)</title>
+    <link rel="stylesheet" href="../style.css"> 
 </head>
-<body data-theme="light_green">
-<script>
-// --- テーマ適用ロジック (省略) ---
-function applyTheme(theme) {
-    document.body.setAttribute('data-theme', theme);
-}
+<body data-theme="light_green"> 
 
-window.onload = function() { 
-    const savedTheme = localStorage.getItem('selectedTheme') || 'light_green';
-    applyTheme(savedTheme);
-}
-</script>
+    <script>
+    const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+    if (!isMobile) { 
+        location.replace('../waiting.html'); 
+    }
+    </script>
 
-<div class="main-content-area">
-    <div class="waiting-container">
-        <h1>⚠️ ただいま更新中です</h1>
-        <div class="spinner"></div>
-        <p style="margin-bottom: 30px;">サービス向上のため、一時的にメンテナンスを行っております。</p>
-        <p style="font-size: 0.8em; color: var(--text-soft);">公開までしばらくお待ちください。</p>
-    </div>
-</div>
+    <main>
+        <h1>現在処理中です... (SP)</h1>
+        <p>しばらくお待ちください。</p>
+    </main>
 
-<div class="bottom-ad-footer"><div id="ad-area-bottom"></div></div>
-<script src="ads.js"></script>
-
+    <footer>
+        <p>
+            <a href="../privacy.html">プライバシーポリシー</a> | 
+            <a href="../terms.html">利用規約</a>
+        </p>
+        <p>Copyright © 2024 篠ノ井乗務区制作. All Rights Reserved.</p>
+    </footer>
+    
+    <script src="../script.js"></script>
 </body>
 </html>
