--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Premium ToolBox</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ToolBox</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -14,25 +12,19 @@
             <div class="logo-text" onclick="location.href='index.html'">ToolBox.</div>
             <nav id="nav-area">
                 <a href="index.html" class="nav-btn">🏠 Home</a>
-                </nav>
-            <div id="status-area"></div>
+                <a href="settings.html" class="nav-btn">⚙️ Settings</a>
+            </nav>
+            <div id="user-status-area"></div>
         </div>
     </header>
 
-    <div id="ad-wrapper" class="ad-container">
+    <div id="ad-wrapper" class="ad-container" style="display:none;">
         <div class="ad-label">SPONSOR</div>
-        <div id="ad-space">
-            </div>
+        <div id="ad-space"></div>
     </div>
 
     <main>
-        <div id="hero-section" style="text-align:center; margin-bottom:40px;">
-            <h1 id="welcome-title">Loading...</h1>
-            <p id="welcome-desc"></p>
-        </div>
-
-        <div id="tool-grid" class="grid">
-            </div>
+        <div id="tool-grid"></div>
     </main>
 
     <script src="script.js"></script>
