--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
         </div>
     </header>
 
-    <div id="ad-wrapper" class="ad-container" style="display:none;">
-        <div class="ad-label">SPONSOR</div><div id="ad-space"></div>
-    </div>
-
     <main class="container">
         <section id="tool-grid"></section>
     </main>
+
+    <footer style="text-align:center; padding:40px 20px; font-size:0.8rem; color:#94a3b8;">
+        <a href="privacy.html" style="color:inherit; text-decoration:none;">プライバシーポリシー</a> | 
+        <a href="contact.html" style="color:inherit; text-decoration:none;">お問い合わせ</a>
+        <p>© 2025 ToolBox Premium All Rights Reserved.</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
