--- a/index.html
+++ b/index.html
@@ -1,28 +1,21 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ToolBox Premium</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ToolBox</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body id="app-body">
+<body>
     <header>
         <div class="header-container">
             <div class="logo-text" onclick="location.href='index.html'">ToolBox.</div>
-            <nav id="nav-area"></nav>
             <div id="status-area"></div>
         </div>
     </header>
-
     <main class="container">
-        <section id="tool-grid"></section>
+        <div id="tool-grid"></div>
     </main>
-
-    <footer style="text-align:center; padding:40px 20px; font-size:0.8rem; color:#94a3b8;">
-        <a href="privacy.html" style="color:inherit; text-decoration:none;">プライバシーポリシー</a> | 
-        <a href="contact.html" style="color:inherit; text-decoration:none;">お問い合わせ</a>
-        <p>© 2025 ToolBox Premium All Rights Reserved.</p>
-    </footer>
     <script src="script.js"></script>
 </body>
 </html>
