--- a/login.html
+++ b/login.html
@@ -1,60 +1,16 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <title>ログイン・登録</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body style="display:flex; justify-content:center; padding-top:50px;">
-    <div style="width:300px; text-align:center;">
-        <h2 id="auth-title">ログイン</h2>
-        <input type="email" id="email" placeholder="メール" style="width:100%; margin-bottom:10px; padding:8px;">
-        <input type="password" id="password" placeholder="パスワード" style="width:100%; margin-bottom:10px; padding:8px;">
-        <div id="signup-options" style="display:none; margin-bottom:10px;">
-            <label><input type="checkbox" id="newsletter" checked> メルマガ希望</label>
+<head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>ログイン</title><link rel="stylesheet" href="style.css"></head>
+<body>
+    <header><div class="header-container"><a href="index.html" class="logo-text">LOGIN</a></div></header>
+    <main class="container">
+        <div class="custom-form">
+            <h2>ログイン</h2>
+            <input type="text" id="login-email" placeholder="メールアドレス">
+            <input type="password" id="login-pass" placeholder="パスワード">
+            <button onclick="checkAuth()" class="submit-btn">ログイン</button>
+            <button onclick="location.href='signup.html'" style="background:none; border:none; color:var(--text); margin-top:15px; width:100%; cursor:pointer;">新規会員登録はこちら</button>
         </div>
-        <button id="auth-submit-btn" style="width:100%; padding:10px; background:#4CAF50; color:#fff;">ログイン</button>
-        <p><a href="#" id="toggle-auth">新規登録はこちら</a></p>
-        <p><a href="index.html">戻る</a></p>
-    </div>
-
-    <script>
-        const GAS_URL = "https://script.google.com/macros/s/AKfycbzW2As0R3qr3maSCKTz5To2qt3hLYwfreykU6BjEcxqE1VOm8M_H9HyBS-G3K0HSmnN/exec";
-        const title = document.getElementById('auth-title');
-        const submitBtn = document.getElementById('auth-submit-btn');
-        const toggleLink = document.getElementById('toggle-auth');
-        const signupOptions = document.getElementById('signup-options');
-        let isLogin = true;
-
-        toggleLink.onclick = () => {
-            isLogin = !isLogin;
-            title.innerText = isLogin ? "ログイン" : "新規登録";
-            submitBtn.innerText = isLogin ? "ログイン" : "登録する";
-            signupOptions.style.display = isLogin ? "none" : "block";
-        };
-
-        submitBtn.onclick = async () => {
-            const res = await fetch(GAS_URL, {
-                method: "POST",
-                body: JSON.stringify({
-                    action: isLogin ? "login" : "signup",
-                    email: document.getElementById('email').value,
-                    password: document.getElementById('password').value,
-                    newsletter: document.getElementById('newsletter').checked
-                })
-            });
-            const result = await res.text();
-            if(result === "success") {
-                if(isLogin) {
-                    localStorage.setItem('isLoggedIn', 'true');
-                    localStorage.setItem('currentUser', document.getElementById('email').value);
-                    location.href = "index.html";
-                } else {
-                    alert("登録完了！");
-                    location.reload();
-                }
-            } else { alert("失敗しました"); }
-        };
-    </script>
+    </main><script src="script.js"></script>
 </body>
 </html>
